5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_2049.log
== TEST (2019-03-26 18:29:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_do_jogo = float(input("Qual o valor unitário do jogo? "))

valor_do_frete = 45

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- OUTPUT:
109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:29:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_do_jogo = float(input("Qual o valor unitário do jogo? "))

valor_do_frete = 45

total = valor_do_jogo * 8 + valor_do_frete

print(total)
-- OUTPUT:
109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:19:12) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:19:44) 
-- CODE:
as=r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(as)
-- ERROR:
File "XXXX", line 1
    as=r+q*y=x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:19:47) 
-- CODE:
as=r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(as)
-- ERROR:
File "XXXX", line 1
    as=r+q*y=x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:19:48) 
-- CODE:
as=r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(as)
-- EXECUTION TIME:
0.157603
-- ERROR:
  File "/home/codebench/codes/1596/2049/main.py", line 1
    as=r+q*y=x
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:19:51) 
-- CODE:
as=r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(as)
-- ERROR:
File "XXXX", line 1
    as=r+q*y=x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:00) 
-- CODE:
as=r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print("as")
-- ERROR:
File "XXXX", line 1
    as=r+q*y=x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:35) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(r)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:36) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(r)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:44) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(x)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:46) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(x)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:46) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(x)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:47) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(x)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:20:47) 
-- CODE:
r+q*y=x
int(input("dividendo"))
int(input("divisor"))
int(input("quociente"))
int(input("resto"))
print(x)
-- ERROR:
File "XXXX", line 1
    r+q*y=x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:23:41) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total=r+q*di=div
print(total)

-- ERROR:
File "XXXX", line 5
    total=r+q*di=div
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:23:42) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total=r+q*di=div
print(total)

-- ERROR:
File "XXXX", line 5
    total=r+q*di=div
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:23:55) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total=r+q*di=div
print(total)

-- ERROR:
File "XXXX", line 5
    total=r+q*di=div
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:23:57) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total=r+q*di=div
print(total)

-- ERROR:
File "XXXX", line 5
    total=r+q*di=div
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:26) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:27) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:27) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:27) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:27) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:28) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:28) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:24:28) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:33:20) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:33:22) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:33:22) 
-- CODE:
div=float(input("dividendo"))
di=float(input("divisor"))
q=float(input("quociente"))
r=float(input("resto"))
total= r + q * di= div
print(total)

-- ERROR:
File "XXXX", line 5
    total= r + q * di= div
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:39) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print("O dividendo e :", x)
print("O divisor e :", y)
print("O quociente e :", x//y)
print("O resto e :", x%y)
-- OUTPUT:
O dividendo e : 8
O divisor e : 5
O quociente e : 1
O resto e : 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:51) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print("O dividendo e :", x)
print("O divisor e :", y)
print("O quociente e :", x//y)
print("O resto e :", x%y)
-- EXECUTION TIME:
0.146844
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
O dividendo e : 8
O divisor e : 5
O quociente e : 1
O resto e : 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
O dividendo e : 14
O divisor e : 2
O quociente e : 7
O resto e : 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
O dividendo e : 347
O divisor e : 2
O quociente e : 173
O resto e : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:05) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print("O dividendo e :", x)
print("O divisor e :", y)
print("O quociente e :", x//y)
print("O resto e :", x%y)
-- OUTPUT:
O dividendo e : 8
O divisor e : 5
O quociente e : 1
O resto e : 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:44:01) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print("dividendo:", x)
print("divisor:", y)
print("quociente:", x//y)
print("resto:", x%y)
-- OUTPUT:
dividendo: 8
divisor: 5
quociente: 1
resto: 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:06) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print("dividendo:", x)
print("divisor:", y)
print("quociente:", x//y)
print("resto:", x%y)
-- EXECUTION TIME:
0.193048
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo: 8
divisor: 5
quociente: 1
resto: 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo: 14
divisor: 2
quociente: 7
resto: 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo: 347
divisor: 2
quociente: 173
resto: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:45:22) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:45:27) 
-- CODE:
x=int(input("Digite um valor :"))
y=int(input("Digite outro valor :"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.23347
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
